# LoanPrediction

./: README.md  loan prediction.ipynb  pyproject.toml
