[project]
name = "dss1_loanprediction"
version = "0.1.0"
description = "loan prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.4",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
]
